--- a/data/get-ssb-data.Rmd
+++ b/data/get-ssb-data.Rmd
@@ -14,7 +14,8 @@ lang: no-NB
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(eval = FALSE)
+knitr::opts_chunk$set(eval = TRUE)
+# eval = FALSE gjør vi for å hindre at vi ved et uhell henter inn dataene på nytt (som i prinsippet kan ha endret seg hvis SSB oppdaterer statistikken).
 library(PxWebApiData)
 library(tidyverse)
 ```
@@ -44,17 +45,21 @@ Vi bruker perioden januar 1999 t.o.m. mai 2014. Perioden har relativt få kommun
 ```{r, echo=FALSE}
 # combine med c(), rep() se argument each, str_pad()
 # til å lage 01, 02...11, 12
-#tid_vec <- 
-#tid_vec <- tid_vec[]
+ tid_vec <- paste(rep(1999:2014,
+                      each = 12), "M",
+                  str_pad(1:12,
+                          width = 2,
+                          pad = "0"),
+                  sep = "")
+tid_vec <- tid_vec[1:185]
 ```
 
 ```{r}
-#length(tid_vec)
+length(tid_vec)
 ```
 
-
 ```{r, ech0=FALSE}
-#c(head(tid_vec, n = 14), "...", tail(tid_vec, n = 14))
+c(head(tid_vec, n = 14), "...", tail(tid_vec, n = 14))
 ```
 
 ### Kjønn og aldersgruppe
@@ -76,7 +81,7 @@ Tabellen er på `418*185*3=231990` rekker som er under grensen på 800000 rekker
 
 ```{r}
 arbl_p_alder <- ApiData(
-    10540,
+    http://www.ssb.no/statbank/sq/10059717,
     Region = kom_vec,
     Tid = tid_vec,
     Alder = alder_vec
@@ -98,14 +103,24 @@ dim(df_arbl_p_alder)
 Her fordelt på kjønn. Vi har `418*185*2=154660` rekker som er under grensen på 800k. Kan derfor hente alt på en gang. Det er nå ikke lenger Alder som er statistikk variabel så den må byttes ut med `Kjonn =`
 
 ```{r, echo=FALSE}
-#arbl_p_kjonn <- ApiData()
+arbl_p_kjonn <- ApiData(04471,
+    Region = kom_vec,
+    Tid = tid_vec,
+    Kjonn = kjonn_vec)
 
-#df_arbl_p_kjonn <- 
+df_arbl_p_kjonn <- data.frame(
+    knr = arbl_p_kjonn[[2]]$Region,
+    knavn = arbl_p_kjonn[[1]]$region,
+    kjonn = arbl_p_kjonn[[1]]$kjønn,
+    tid = arbl_p_kjonn[[2]]$Tid,
+    # arbeidsløse i prosent
+    alp_k = arbl_p_kjonn[[1]]$value
+)
 ```
 
 ```{r}
-#dim(df_arbl_p_kjonn)
-#names(df_arbl_p_kjonn)
+dim(df_arbl_p_kjonn)
+names(df_arbl_p_kjonn)
 ```
 
 ### Tabell 10594, Antall arbeidsløse per kommune, etter kjønn, månedlig 1991M01-2014M05
@@ -132,15 +147,15 @@ Antall rekker blir `418*16*106*2=1417856` som er mer enn maks grensen på 800k. 
 Bruk c() og str_pad() til å lage en `alder_klasse_vec` på formen "000", "001", "002" ... "104", "105+". Bruk denne som verdi for Alder i `ApiData()` kallet, dvs. `Alder = alder_klasse_vec`. Bruk hhv. Kjonn = "Kvinner" og Kjonn = "Menn" for å hente de respektive datasettene.
 
 ```{r, echo=FALSE}
-#alder_klasse_vec <- 
+alder_klasse_vec <- c(str_pad(0:104, width = 3, pad = "0"), "105+")
 ```
 
 ```{r}
-#length(alder_klasse_vec)
+length(alder_klasse_vec)
 ```
 
 ```{r}
-#c(head(alder_klasse_vec, n = 5), "...", tail(alder_klasse_vec, n = 5))
+c(head(alder_klasse_vec, n = 5), "...", tail(alder_klasse_vec, n = 5))
 ```
 
 
@@ -169,7 +184,7 @@ df_bef_K <- data.frame(
 ```
 
 ```{r}
-#dim(df_bef_K)
+dim(df_bef_K)
 ```
 
 #### Menn
@@ -177,13 +192,25 @@ df_bef_K <- data.frame(
 Hent ned tilsvarende befolkningsdata for menn.
 
 ```{r, echo=FALSE}
-#bef_M <- ApiData()
+bef_M <- ApiData(07459,
+    Region = kom_vec,
+    Tid = as.character(1999:2014),
+    Alder = alder_klasse_vec,
+    Kjonn = "Menn")
 
-#df_bef_M <- 
+df_bef_M <- data.frame(
+    knr = bef_M[[2]]$Region,
+    knavn = bef_M[[1]]$region,
+    tid = bef_M[[2]]$Tid,
+    # Vil ha Kvinner, Menn ikke 2, 1 i bef_K[[2]]$Kjonn
+    kjonn = bef_M[[1]]$kjønn,
+    # velger alder som 000 001 etc
+    alder = bef_M[[2]]$Alder,
+    bef = bef_M[[2]]$value)
 ```
 
 ```{r}
-#dim(df_bef_M)
+dim(df_bef_M)
 ```
 
 ### Write out the dataframes
@@ -191,19 +218,19 @@ Hent ned tilsvarende befolkningsdata for menn.
 For kontroll.
 
 ```{r}
-# names(df_arbl_p_alder)
-# names(df_arbl_p_kjonn)
-# names(df_arbl)
-# names(df_bef_K)
-# names(df_bef_M)
+names(df_arbl_p_alder)
+names(df_arbl_p_kjonn)
+names(df_arbl)
+names(df_bef_K)
+names(df_bef_M)
 ```
 
 ```{r}
-# dim(df_arbl_p_alder)
-# dim(df_arbl_p_kjonn)
-# dim(df_arbl)
-# dim(df_bef_K)
-# dim(df_bef_M)
+dim(df_arbl_p_alder)
+dim(df_arbl_p_kjonn)
+dim(df_arbl)
+dim(df_bef_K)
+dim(df_bef_M)
 ```
 
 ```{r}
