--- a/data/get-ssb-data.Rmd
+++ b/data/get-ssb-data.Rmd
@@ -81,7 +81,7 @@ Tabellen er på `418*185*3=231990` rekker som er under grensen på 800000 rekker
 
 ```{r}
 arbl_p_alder <- ApiData(
-    http://www.ssb.no/statbank/sq/10059717,
+    10540,
     Region = kom_vec,
     Tid = tid_vec,
     Alder = alder_vec
@@ -130,9 +130,19 @@ Antall rekker vil være `418*185*2=154660`.
 Igjen er det `Kjonn` og ikke `Alder` som er statistikk-variabel.
 
 ```{r, echo=FALSE}
-#arbl <- ApiData()
+arbl <- ApiData(
+    10594,
+    Region = kom_vec,
+    Tid = tid_vec,
+    Kjonn = kjonn_vec)
 
-#df_arbl <- 
+df_arbl <- data.frame(
+    knr = arbl[[2]]$Region,
+    knavn = arbl[[1]]$region,
+    tid = arbl[[2]]$Tid,
+    kjonn = arbl[[1]]$kjønn,
+    # arbeidsløse i prosent
+    al = arbl[[1]]$value)
 ```
 
 ```{r}
