--- a/data/make-data-tidy.Rmd
+++ b/data/make-data-tidy.Rmd
@@ -68,8 +68,8 @@ df_arbl_p_alder <- df_arbl_p_alder %>%
 
 ```{r, echo=FALSE}
 #endrer også navn fra df_arbl_p_alder til arblos_aldersgrp
-#arblos_aldersgrp <- 
-#rm(df_arbl_p_alder)
+arblos_aldersgrp <- separate(df_arbl_p_alder, "tid", c("aar", "mnd"), sep = "M")
+rm(df_arbl_p_alder)
 ```
 
 ### Fikse knavn
@@ -103,7 +103,15 @@ head(unique(arblos_aldersgrp$knavn), n = 10)
 arblos_aldersgrp er ikke tidy. Hver observasjon er spredd over tre rekke, hhv. 15_29, 30_74 og 15_74. Pivot dataframen `arblos_aldersgrp` slik at vi får en observasjon per rekke. Bruk opsjonen `names_prefix` og sett denne lik "alp_" slik at de tre nye variabelnavnene starter med dette. Bruk samtidig mutate til å endre variablene `aar`og `mnd` til integer.
 
 ```{r, echo=FALSE}
-#arblos_aldersgrp <- 
+arblos_aldersgrp <- arblos_aldersgrp %>%
+  pivot_wider(
+    names_from = alder,
+    values_from = alp,
+    names_prefix = "alp_") %>% 
+  mutate(
+    aar = as.integer(aar),
+    mnd = as.integer(mnd)
+  )
 ```
 
 Slik skal `arblos_aldersgrp` nå se ut.
@@ -143,7 +151,7 @@ print(arrange(df_arbl_p_kjonn, knr, knavn, tid, kjonn), n = 2)
 ### Splitte tid
 
 ```{r, echo=FALSE}
-#df_arbl_p_kjonn <- 
+df_arbl_p_kjonn <- separate(data = df_arbl_p_kjonn, c('aar', 'mnd'), col = "tid", sep = "M")
 ```
 
 ```{r}
@@ -197,9 +205,11 @@ Før vi slår i sammen de tre tibble-ene vi har gjort «tidy» er det lurt å sj
 
 Tenk nøye gjennom hvilke variabler man skal «joine» på.
 
-```{r, echo=FALSE}
+```{r}
 # arbeidsløse 1999 til 2014 månedlige data
-#al9914m <- 
+al9914m <- df_arbl %>% 
+  right_join(df_arbl_p_kjonn) %>% 
+  right_join(arblos_aldersgrp)
 ```
 
 ```{r}
@@ -250,7 +260,8 @@ df_bef_M <- df_bef_M %>%
 
 ```{r, echo=FALSE}
 # Befolkning 1999 til 2014 Menn og Kvinner
-#bef9914MK <- 
+bef9914MK <- df_bef_K %>% 
+  right_join(df_bef_M)
 ```
 
 ```{r}
@@ -263,13 +274,21 @@ names(bef9914MK)
 Fiks kommunenavnene.
 
 ```{r, echo=FALSE}
-#bef9914MK$knavn <- 
+bef9914MK$knavn <- str_remove(
+  string = bef9914MK$knavn,
+  pattern = fixed(" (-2019)"))
+bef9914MK$knavn <- str_remove(
+  string = bef9914MK$knavn,
+  pattern = fixed(" (1992-2019)"))
+bef9914MK$knavn <- str_remove(
+  string = bef9914MK$knavn,
+  pattern = fixed(" (1994-2019)"))
 ```
 
 ### Skifte navn fra tid til aar
 
 ```{r, echo=FALSE}
-#bef9914MK <- 
+bef9914MK <- separate(data = bef9914MK, "aar", col = "tid", sep = "M")
 ```
 
 ### Gjøre om alder fra chr til integer
@@ -289,7 +308,17 @@ bef9914MK <- bef9914MK %>%
 Vi vil benytte årsklassene "0_14", "15_29", "30_74" og "75_105" siden disse samsvarer med dem brukt for arbeidsløshet. Bruk `mutate()`, `case_when()` og `alder %in% c(0:14) ~ "0_14"` osv. for å definere årsklassene. Gi variabelen med årsklassene navnet `ald_int`. Bruk så `group_by()` på knr, knavn, aar og ald_int og summer opp vha. `sum()`. La siste linjen i `summarise()` være `bef_MK = bef_K + bef_M` så får vi også med oss total befolkning for de ulike årsklassene.
 
 ```{r, echo=FALSE}
-#bef9914MK <- 
+bef9914MK <- bef9914MK %>% 
+  mutate(alder = 
+    case_when(alder %in% c(0:14) ~ "0_14",
+              alder %in% c(15:29) ~ "15_29",
+              alder %in% c(30:74) ~ "30_74",
+              alder %in% c(75:105) ~ "75_105")) %>% 
+    rename(ald_int = alder) %>% 
+  group_by(knr, knavn, aar, ald_int) %>% 
+  summarise(bef_K = sum(bef_K), 
+            bef_M = sum(bef_M),
+            bef_MK = bef_K + bef_M)
 ```
 
 ```{r}
@@ -299,7 +328,11 @@ print(bef9914MK, m = 2)
 ### Gjør `pivot_` så vi blir «tidy».
 
 ```{r, echo=FALSE}
-#bef9914MK <- 
+bef9914MK <- bef9914MK %>% 
+  pivot_wider(
+    names_from = ald_int,
+    values_from = c(bef_K, bef_M, bef_MK)
+  )
 ```
 
 Gjør du ting rett skal `bef9914MK` nå se slik ut:
