--- a/model.Rmd
+++ b/model.Rmd
@@ -90,7 +90,11 @@ names(wf)
 Summer de ulike årskategoriene for de to kjønnene og menn+kvinner for å finne total befolkning de ulike årene. Bruk mutate til å lage de nye variablene.
 
 ```{r, echo=FALSE}
-# bef <- bef %>% 
+bef <- bef %>% 
+  mutate(
+    bef_K = bef_K_0_14 + bef_K_15_29 + bef_K_30_74 + bef_K_75_105,
+    bef_M = bef_M_0_14 + bef_M_15_29 + bef_M_30_74 + bef_M_75_105,
+    bef_KM = bef_K + bef_M)
 ```
 
 ```{r}
@@ -101,7 +105,11 @@ names(bef)
 Legg befolkningsdata varaiablene bef_K, bef_M, bef_KM til wf. Husk at de må aggregeres for hele landet (group_by() og så summarise() før de «joines»). Bruk tilslutt mutate() make_date() for å lage en ny variabel år som er en date, dvs aar + month=1L + day=1L.
 
 ```{r, echo=FALSE}
-# wf <- bef %>%
+wf <- bef %>%
+  group_by(aar) %>%
+  summarise(bef_K = sum(bef_K),
+            bef_M = sum(bef_M),
+            bef_KM = sum(bef_KM))
 ```
 
 Da skal du få
@@ -113,8 +121,13 @@ Vi vil nå se på arbeidsstyrke relativt til befolkning på landsbasis, dvs. wf_
 Plot dataen vha. geom_line() for de tre kategoriene. Bruk år som x-variabel.
 
 ```{r, echo=FALSE}
-#wf %>% 
-#    ggplot() +
+wf %>% 
+  ggplot(wf, mapping = aes(x = år)) +
+  geom_line(mapping = aes(y = wf_K/bef_K, color = "...")) +
+  geom_line(mapping = aes(y = wf_M/bef_M, color = "darkblue")) +
+  geom_line(mapping = aes(y = wf_KM/bef_KM)) +
+  ggtitle("Arbeidsstyrke relativt til befolkning. Menn blå, kvinner rød og totalt svart.") +
+  theme(legend.position = "none")
 ```
 
 Hvordan kan pukkelen rett før 2010 forklares?
@@ -158,7 +171,14 @@ bef_f
 Lag til slutt tibble-en wf_f_bef som innholde arbeidsstyrke (wf-f) og befolkning (bef-f) på fylkesnivå for hvert år.
 
 ```{r, echo=FALSE}
-#wf_f_bef <- wf_f %>% 
+wf_f_bef <- wf_f %>%
+  mutate(fylke = substr(knr, start = 1, stop = 2)) %>% 
+    group_by(aar, fylke) %>% 
+    summarise(
+        bef_K_f = sum(bef_K, na.rm = TRUE),
+        bef_M_f = sum(bef_M, na.rm = TRUE),
+        bef_KM_f = bef_K_f + bef_M_f) %>% 
+    select(aar, fylke, bef_K_f, bef_M_f, bef_KM_f)
 ```
 
 Da skal wf_f_bef se slik ut:
@@ -170,8 +190,12 @@ Plot nå arbeidsstyrke relativt til befolkning vha. geom_line()
 
 ```{r, echo=FALSE}
 # kvinner og menn
-#wf_f_bef %>% 
-#    ggplot() +
+wf_f_bef %>%
+  ggplot() +
+  geom_line(wf_f_bef, mapping = aes(x = år,
+                                    y = wf_KM_f/bef_KM_f,
+                                    color = fylke)) +
+  theme(legend.position = "bottom")
 ```
 
 
@@ -209,21 +233,42 @@ Plot nå for regionene wf_KM_r/bef_KM_r, både vha. geom_line() og geom_smooth()
 
 ```{r, echo=FALSE}
 # kvinner og menn
-#wf_r %>% 
+wf_r %>% 
+  ggplot(wf_r, mapping = aes(x = dato, 
+                             y = wf_KM_r/bef_KM_r,
+                             color = region)) +
+  geom_line(alpha = 0.5) +
+  geom_smooth(se = FALSE) +
+  theme(legend.position = "bottom") +
+  ggtitle("Arbeidsstyrkens andel av befolkningen for regionene.")
 ```
 
 Lag tilsvarende plot for kvinner.
 
 ```{r, echo=FALSE}
 # kvinner
-#wf_r %>% 
+wf_r %>% 
+  ggplot(wf_r, mapping = aes(x = dato, 
+                             y = wf_K_r/bef_K_r,
+                             color = region)) +
+  geom_line(alpha = 0.5) +
+  geom_smooth(se = FALSE) +
+  theme(legend.position = "bottom") +
+  ggtitle("Arbeidsstyrkens andel av befolkningen for kvinner per region.")
 ```
 
 Lag tilsvarende plot for menn
 
 ```{r, echo=FALSE}
 # menn
-#wf_r %>% 
+wf_r %>% 
+  ggplot(wf_r, mapping = aes(x = dato, 
+                             y = wf_M_r/bef_M_r,
+                             color = region)) +
+  geom_line(alpha = 0.5) +
+  geom_smooth(se = FALSE) +
+  theme(legend.position = "bottom") +
+  ggtitle("Arbeidsstyrkens andel av befolkningen for menn per region.")
 ```
 
 Forlar kort den generelle utviklingen i arbeidsstyrken. Hva er det som «redder oss»?
@@ -251,12 +296,16 @@ Vi har nå en tibble med data for hver kommune inne i tibble-en arblos_by_knr.
 Skriv en funksjon som kjører den lineære modellen wf_KM ~ alp_15_29 + alp_30_74 på en input dataframe a_df. Kall funksjonen mod1 (i magel på noe bedre navn).
 
 ```{r, echo=FALSE}
-#mod1 <- 
+mod1 <- function(a_df){
+  lm(wf_KM ~ alp_15_29 + alp_30_74, data = a_df)}
 ```
 KJøre så modellen vha. funksjonen mod1 på data i arblos_by_knr, og lag en list-column i arblos_by_knr som inneholder modellen. Kjør også tidy og glance fra broom på modellene for å få hhv. koeffisienter og ulike summary av modellen. Lagre resultatene i hhv. mod1_arblos, mod1_arblos_coef og mod1_arblos_sum (i siste er sum forkortelse for summary)
 
 ```{r, echo=FALSE}
-#arblos_by_knr <- 
+arblos_by_knr <- arblos_by_knr %>% 
+  mutate(mod1_arblos = map(data, .f = mod1)) %>% 
+  mutate(mod1_arblos_coef = map(.x = mod1_arblos, .f = tidy)) %>% 
+  mutate(mod1_arblos_sum = map(.x = mod1_arblos, .f = glance))
 ```
 
 arblos_by_knr skal nå se ut slik:
@@ -291,7 +340,9 @@ Bruk så unnest() til å pakke ut mod1_arblos_coef og mod1_arblos_coef (husk at 
 
 ```{r, echo=FALSE}
 #modell arbeidsløse resultat
-#mod_arbl_re <- 
+mod_arbl_re <- arblos_by_knr %>% 
+  unnest(c("mod1_arblos_coef", "mod1_arblos_sum"), names_repair = "universal") %>% 
+  select(knr, knavn, term, estimate, std.error, p.value...9, adj.r.squared)
 ```
 
 Du skal da ha noe som ser slik ut:
@@ -332,7 +383,17 @@ kom_str_mod %>%
 Lag tilsvarende plot for alp_30_74.
 
 ```{r, echo=FALSE}
-#kom_str_mod %>% 
+kom_str_mod %>% 
+  filter(term == "alp_15_29") %>% 
+    filter(estimate > -500 & estimate < 500 ) %>%
+    filter(p.value...9 < 0.05) %>% 
+    ggplot(mapping = aes(
+        x = estimate,
+        y = p.value...9,
+        colour = k_str
+        )
+        ) +
+    geom_point()
 ```
 
 Hvor mange har vi?
