--- a/data/make-data-tidy.Rmd
+++ b/data/make-data-tidy.Rmd
@@ -15,6 +15,10 @@ lang: no-NB
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(readr)
+library(dplyr)
+library(tidyr)
+library(stringr)
 ```
 
 # Assignment 4;del 2; Tidy data
